# hpmcpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: main.yml
include/: HC.h  HCAABB.h  HCBoundingSphere.h  HCMath.h  HCMath.hpp  HCMatrix3x3.h  HCMatrix3x3.hpp  HCMatrix4x4.h  HCMatrix4x4.hpp  HCOBB.h  HCONB.h  HCPlane.h  HCQuaternion.h  HCQuaternion.hpp  HCRay.h  HCTypes.h  HCTypes.hpp  HCVector2.h  HCVector2.hpp  HCVector3.h  HCVector3.hpp  HCVector4.h  HCVector4.hpp  Hpm.hpp  HpmCpp.h
include/Ext/: HCAABB.h  HCAABB.hpp  HCBoundingSphere.h  HCBoundingSphere.hpp  HCOBB.h  HCOBB.hpp  HCONB.h  HCONB.hpp  HCPlane.h  HCPlane.hpp  HCRay.h  HCRay.hpp
src/: HCAABB.cpp  HCBoundingSphere.cpp  HCMatrix4x4.cpp  HCOBB.cpp  HCONB.cpp  HCPlane.cpp  HCQuaternion.cpp  HCVector2.cpp  HCVector3.cpp  HCVector4.cpp  hpmcpp.cpp
